--- a/day2/Cargo.toml
+++ b/day2/Cargo.toml
@@ -6,3 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+color-eyre = "0.6.2"
+itertools = "0.12.0"
+nom = "7.1.3"
+pico-args = "0.5.0"
+rayon = "1.8.0"
